<resources>
    <string name="app_name">Hangman</string>
    <string name="APP_NAME">HANGMAN</string>
    <string name="ok">OK</string>
    <string name="not_yet">Not yet</string>
    <string name="never">Never</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="btnGuess">Guess</string>
    <string name="home">Home</string>
    <string name="removed">Removed</string>
    <string name="maximum_word_length">Maximum Word Length:</string>
    <string name="number_of_lives">Number of Lives:</string>
    <string name="minimum_word_length">Minimum Word Length:</string>
    <string name="new_game">New Game</string>
    <string name="please_select_a_word_list">Please select a word list:</string>
    <string name="settings">Settings</string>
    <string name="all_words">All words:</string>
    <string name="new_word">New Word</string>
    <string name="words">Words:</string>
    <string name="list_name">List Name</string>
    <string name="word_list_name">Word List Name</string>
    <string name="new_list">New List</string>
    <string name="edit">Edit</string>
    <string name="player_name">Player name</string>
    <string name="position">Position</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="dialog_window">Dialog Window</string>
    <string name="add">Add</string>
    <string name="category">Category: </string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="clear_best_times">Clear Best Times</string>
    <string name="no_reverse">This cannot be reversed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="best_times">Best Times</string>
    <string name="unnamed">Unnamed</string>
    <string name="no_best_times_have_been_set">No best times have been set</string>
    <string name="enjoyed">We hope you\'ve enjoyed playing so far, please rate this game 5* if you enjoy!</string>
    <string name="game_lost">Current game will be lost!</string>
    <string name="well_done">Well done you have won</string>
    <string name="play_again">Do you want to play again?</string>
    <string name="you_have_lost">You have lost! The word was</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="failed_to_rate">Could not open the Play Store, please install the Play Store app.</string>
    <string name="already_entered">You\'ve already entered that word</string>
    <string name="only_letters">You can only enter letters</string>
    <string name="and_spaces">and spaces into the list</string>
    <string name="and_spaces_file_name">and spaces for the file name</string>
    <string name="cant_enter_nothing">You can\'t enter nothing into the list</string>
    <string name="to_add_word_list">To add a word list you need to add some words first</string>
    <string name="list_name_invalid">List name is invalid</string>
    <string name="not_saved">You haven\'t saved this new list!</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>
    <string name="_5th">5th</string>
    <string name="_6th">6th</string>
    <string name="_7th">7th</string>
    <string name="_8th">8th</string>
    <string name="_9th">9th</string>
    <string name="_10th">10th</string>
    <string name="win">win</string>
    <string name="loss">loss</string>
    <string name="default_list">Dictionary</string>
    <string name="custom_list">Custom List</string>
    <string name="default_custom">Please create a list</string>
    <string name="banner_ad_unit_id">ca-app-pub-7494504958391964/1528753736</string>
    <string name="banner_ad_unit_id_java">ca-app-pub-7494504958391964~7469162938</string>
    <string name="google_play">market://details?id=com.gfaiers.hangman</string>
    <string name="google_play_website">https://play.google.com/store/apps/details?id=com.gfaiers.hangman</string>
    <string name="file_not_found">File not found</string>
    <string name="stream_corrupted">Stream Corrupted</string>
    <string name="ioexception">IOException</string>
    <string name="class_not_found">Class not found</string>
    <string name="unable_to_close">Unable to close file</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failure">Unable to sign in.</string>
    <string name="achievement_message">You need to be signed into the google play services to unlock achievements</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
</resources>