<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gfaiers.hangman.CustomListActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <com.google.android.gms.ads.AdView android:id="@+id/adViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <LinearLayout android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/adViewBanner">

        <TextView android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_list_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_view_text"/>

        <EditText android:id="@+id/editTextListName"
            android:hint="@string/list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_view_text"/>
        <TextView android:id="@+id/textViewWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/words"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_view_text"/>
        <LinearLayout android:id="@+id/layoutNewWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText android:id="@+id/editTextAddWord"
                android:hint="@string/new_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/text_size"
                android:maxLines="1"
                android:maxLength="30"
                android:textColor="@color/text_view_text"/>
            <Button android:id="@+id/buttonAdd"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_face"
                android:text="@string/add"
                android:textColor="@color/text_view_text"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/layoutListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/layoutTop">
        <TextView android:id="@+id/textViewAllWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_words"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_view_text"/>
        <ListView android:id="@+id/listViewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_view_text"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/layoutButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:layout_alignParentBottom="true">
        <Button android:id="@+id/buttonSave"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/button_text"
            android:background="@color/button_face"
            android:visibility="gone"/>
        <Button android:id="@+id/buttonBack"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/button_text"
            android:background="@color/button_face"
            android:visibility="gone"/>
        <Button android:id="@+id/buttonDelete"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/button_text"
            android:background="@color/button_face"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>