<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layoutScoreArea"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gfaiers.hangman.ScoresActivity"
    android:background="@color/background">
    <com.google.android.gms.ads.AdView android:id="@+id/adViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/adViewBanner">

        <LinearLayout android:id="@+id/layoutTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/player_name"
                android:textStyle="bold"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/time"
                android:textStyle="bold"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_1st"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView1PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView1Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_2nd"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView2PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView2Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_3rd"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView3PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView3Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_4th"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView4PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView4Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_5th"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView5PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView5Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_6th"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView6PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView6Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_7th"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView7PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView7Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_8th"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView8PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView8Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_9th"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView9PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView9Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/_10th"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView10PN"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text=""
                android:padding="5dp"
                android:textAlignment="center"
                android:id="@+id/textView10Score"
                android:textColor="@color/text_view_text"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
    <Button android:id="@+id/buttonClearTimes"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_face"
        android:textColor="@color/button_text"
        android:text="@string/clear_best_times"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>