<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="layout.CustomDialogFragment"
    android:background="@color/background">
    <ImageView android:id="@+id/imageResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dialog_window"
        android:padding="@dimen/activity_vertical_margin"/>
    <TextView android:id="@+id/textViewCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_view_text"
        android:textAlignment="center"
        android:padding="@dimen/activity_vertical_margin"/>
    <TextView android:id="@+id/textViewFragTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_name"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_view_text"
        android:textAlignment="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>
    <EditText android:id="@+id/editTextPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:textSize="@dimen/text_size"
        android:maxLength="20"
        android:textColor="@color/text_view_text"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button android:id="@+id/buttonPositive"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_face"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/button_text"
            android:layout_weight="1"/>
        <Button android:id="@+id/buttonNeutral"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_face"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/button_text"
            android:layout_weight="1"
            android:visibility="gone"/>
        <Button android:id="@+id/buttonNegative"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_face"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/button_text"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
